; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_fs.c_uv_fs_scandir.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_fs.c_uv_fs_scandir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@UV_FS_SCANDIR = common dso_local global i32 0, align 4
@POST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_fs_scandir(i32* %0, %struct.TYPE_8__* %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32, i32* @UV_FS_SCANDIR, align 4
  %14 = call i32 @INIT(i32 %13)
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32*, i32** %11, align 8
  %18 = icmp ne i32* %17, null
  %19 = zext i1 %18 to i32
  %20 = call i32 @fs__capture_path(%struct.TYPE_8__* %15, i8* %16, i32* null, i32 %19)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %5
  %24 = load i32, i32* %12, align 4
  %25 = call i32 @uv_translate_sys_error(i32 %24)
  store i32 %25, i32* %6, align 4
  br label %33

26:                                               ; preds = %5
  %27 = load i32, i32* %10, align 4
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  store i32 %27, i32* %31, align 4
  %32 = load i32, i32* @POST, align 4
  br label %33

33:                                               ; preds = %26, %23
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @INIT(i32) #1

declare dso_local i32 @fs__capture_path(%struct.TYPE_8__*, i8*, i32*, i32) #1

declare dso_local i32 @uv_translate_sys_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
